--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -3,17 +3,32 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	height: 200px;
-	line-height: 2rem;
-	background-color: black;
+	min-height: 200px;
+	line-height: 1.8rem;
+	background: rgb(255, 226, 89);
+	background: linear-gradient(230deg, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 28%, rgba(255, 226, 89, 1) 90%);
+	flex-wrap: wrap;
 }
 .div {
 	text-align: center;
 	font-size: 1.5rem;
 }
-.icon {
+.imagediv {
 	display: flex;
-	align-items: center;
 	justify-content: space-evenly;
-	margin-top: 20px;
+	align-items: center;
+}
+
+@media only screen and (max-width: 800px) {
+	.footer p {
+		font-size: 1rem;
+
+		line-height: 1.4rem;
+	}
+	.div {
+		margin-top: 1em;
+	}
+	.div:last-child {
+		margin-bottom: 1em;
+	}
 }
