--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -15,6 +15,7 @@
 	font-family: 'Euphoria Script', cursive;
 	font-size: 1.5rem;
 	padding: 4px 0 4px 10px;
+	margin-left: 1em;
 }
 
 .navbarlist {
@@ -47,6 +48,9 @@
 	color: var(--janskunpunainen);
 	font-size: 18px;
 }
+.link {
+	margin-right: 1em;
+}
 
 @media screen and (max-width: 1200px) {
 	.navbar {
@@ -65,7 +69,7 @@
 	}
 
 	.link {
-		text-align: center;
+		margin-right: 0;
 	}
 	.navlink {
 		display: inline-block;
