--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -6,7 +6,7 @@
 	min-height: 200px;
 	line-height: 1.8rem;
 	background: rgb(255, 226, 89);
-	background: linear-gradient(230deg, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 28%, rgba(255, 226, 89, 1) 90%);
+	background: linear-gradient(230deg, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 28%);
 	flex-wrap: wrap;
 }
 .div {
