--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,87 +1,93 @@
-.navbar {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	border-bottom: 2px solid black;
-
-	width: 100vw;
-	height: 50px;
-}
 .brand {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin: 0.3em 0.5em;
+}
+.logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: var(--janskunpunainen);
 	font-family: 'Euphoria Script', cursive;
 	font-size: 1.5rem;
-	padding: 4px 0 4px 10px;
-	margin-left: 1em;
+}
+.btn {
+	color: var(--janskunpunainen);
+	background-color: rgba(0, 0, 0, 0);
+	padding: 7px;
+	font-size: 1.5rem;
+	border: 2px solid var(--janskunpunainen);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 999;
+	border-radius: 5px;
+}
+.btnactive {
+	transform: scale(1.1);
 }
 
 .navbarlist {
+	height: 100%;
+
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.navlink {
-	margin-right: 10px;
-	color: var(--janskunpunainen);
-	background-color: rgba(252, 221, 236, 0.2);
-
-	padding: 3px 10px;
-	border-radius: 10px;
-	transition: var(--transition);
+.esille {
+	transition: 1s all;
+	height: 12em;
 }
-.navlink:hover {
-	background-color: rgba(252, 221, 236, 0.8);
+.piilossa {
+	height: 0;
+	z-index: -10;
+	opacity: 0;
 }
-.btn {
-	display: none;
-	position: absolute;
-	right: 10px;
-	top: 7px;
-	padding: 7px;
+.links {
+	transition: 1s all;
+}
+.li {
+	width: 100%;
+	text-align: center;
 	background-color: var(--janskunvaaleanpunainen);
-	border-radius: 5px;
-	border: 2px solid var(--janskunpunainen);
+	margin: 1px 0;
+	padding: 1px 0;
 }
-.icon {
+.a {
 	color: var(--janskunpunainen);
-	font-size: 18px;
-}
-.link {
-	margin-right: 1em;
 }
 
-@media screen and (max-width: 1200px) {
-	.navbar {
+@media only screen and (min-width: 1200px) {
+	.logo {
+		min-width: 30vw;
 	}
-	.navbarlist {
-		flex-direction: column;
-		height: auto;
-		background-color: var(--janskunvaaleanpunainen);
+	.esillä {
+		height: 5vh;
+	}
+	.piilossa {
+		height: 5vh;
 		opacity: 1;
-		margin-top: 370px;
-
-		width: 250px;
-		max-width: 50%;
-		text-align: center;
-		z-index: 2;
-	}
-
-	.link {
-		margin-right: 0;
-	}
-	.navlink {
-		display: inline-block;
-		padding: 10px 0;
-		border-top: 1px solid black;
-		border-radius: 0;
-		width: 100%;
-	}
-	.navlink:hover {
-		background-color: orange;
 	}
 	.btn {
-		display: block;
+		display: none;
+	}
+	.navbar {
+		display: flex;
+		justify-content: space-between;
+	}
+	.links {
+		width: 80%;
+	}
+	.navbarlist {
+		width: 100%;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+	.li {
+		background: none;
 	}
 }
