--- a/styles/palvelutjatuotteet.module.css
+++ b/styles/palvelutjatuotteet.module.css
@@ -2,16 +2,20 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: row;
 	margin: 1em;
 	transition: var(--transition);
+}
+.imagewrapper {
+	width: 30vw;
 }
 .title_container {
 	background: rgba(255, 255, 255, 0.2);
 	display: inline-block;
 	padding: 1em;
-	width: 100%;
+	width: 40vw;
 	max-width: 350px;
+
 	z-index: 1;
 	position: relative;
 	backdrop-filter: blur(10px);
@@ -19,19 +23,36 @@
 	background-clip: padding-box;
 	box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
 	text-align: center;
-	margin-top: -3em;
+	margin-left: -3em;
 	border-radius: 1em;
 }
 
 .title {
-	font-size: clamp(2rem, 5vw, 3rem);
+	font-size: clamp(1rem, 5vw, 3rem);
 }
 
 @media only screen and (min-width: 700px) {
 	.article {
 		transform: rotateZ(2deg);
+		flex-direction: column;
 	}
 	.article:hover {
 		transform: rotateZ(-2deg);
+	}
+	.title_container {
+		background: rgba(255, 255, 255, 0.2);
+		display: inline-block;
+		padding: 1em;
+		width: 100%;
+		max-width: 350px;
+		z-index: 1;
+		position: relative;
+		backdrop-filter: blur(10px);
+		border: solid 2px transparent;
+		background-clip: padding-box;
+		box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+		text-align: center;
+		margin-top: -3em;
+		border-radius: 1em;
 	}
 }
