--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -56,6 +56,7 @@
 	background-color: var(--janskunvaaleanpunainen);
 	margin: 1px 0;
 	padding: 5px 0;
+	cursor: pointer;
 }
 .a {
 	color: var(--janskunpunainen);
