--- a/styles/tuotteet.module.css
+++ b/styles/tuotteet.module.css
@@ -20,3 +20,24 @@
 .auki {
 	transform: translateX(0%);
 }
+.btncontainer {
+	margin-top: 1em;
+	margin-bottom: 1em;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+.btn {
+	text-align: center;
+	width: 400px;
+	padding: 5px;
+	font-size: 1.4rem;
+	background-color: var(--janskunvaaleanpunainen);
+	color: var(--janskunpunainen);
+	border-radius: 4px;
+	border: 1px solid var(--janskunpunainen);
+	transition: var(--transition);
+}
+.btn:hover {
+	transform: scale(1.1);
+}
