--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar {
-	width: 30vw;
 	min-width: 400px;
+
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -9,7 +9,7 @@
 	background: rgb(255, 226, 89);
 	background: radial-gradient(circle, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 32%, rgba(255, 226, 89, 1) 90%);
 	z-index: 2;
-	height: 80vh;
+	height: 100%;
 	border: 1px solid var(--janskunpunainen);
 }
 .header {
@@ -40,4 +40,25 @@
 	font-size: 1.4rem;
 	background-color: var(--janskunpunainen);
 	color: white;
+}
+@media only screen and (min-width: 1200px) {
+	.sidebar {
+		flex-direction: row;
+		min-width: 100vw;
+		justify-content: center;
+		align-items: center;
+	}
+	.header {
+		display: none;
+	}
+	.main {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+	.sidebarbtn {
+		width: auto;
+		background: transparent;
+	}
 }
