--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 	--janskunpunainen: #ff0c00;
 	--janskunvaaleanpunainen: #fcddec;
 	--transition: 0.3s all;
+	--oakcolor: #55342b;
 }
 * {
 	box-sizing: border-box;
