--- a/styles/tuotekortti.module.css
+++ b/styles/tuotekortti.module.css
@@ -12,10 +12,17 @@
 	background-clip: padding-box;
 	box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
 	margin: 2em;
+	color: var(--oakcolor);
 }
 .title {
-	color: purple;
+	color: var(--oakcolor);
 	text-transform: capitalize;
 	text-align: center;
 	margin-bottom: 0.8rem;
+}
+.luokka {
+	margin: 4px 0;
+}
+.selostus {
+	margin-bottom: 4px;
 }
