--- a/styles/tutustupalveluihin.module.css
+++ b/styles/tutustupalveluihin.module.css
@@ -2,6 +2,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 1em;
+	color: var(--oakcolor);
 }
 @media only screen and (max-width: 700px) {
 	.div {
