--- a/styles/tutustupalveluihin.module.css
+++ b/styles/tutustupalveluihin.module.css
@@ -1,11 +1,12 @@
 .div {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 1em;
+	display: flex;
+	flex-wrap: wrap;
 	color: var(--oakcolor);
+	align-items: center;
+	justify-content: center;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (min-width: 1100px) {
 	.div {
-		grid-template-columns: 1fr;
+		padding: 10vw;
 	}
 }
