--- a/styles/ctabtn.module.css
+++ b/styles/ctabtn.module.css
@@ -1,5 +1,6 @@
 .btncontainer {
 	width: 100%;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -20,6 +21,7 @@
 	border-radius: 100px;
 	transition: var(--transition);
 	margin: auto;
+	margin: 0 1em;
 }
 .btn span {
 	position: relative;
