--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,12 +1,15 @@
 .footer {
 	color: var(--janskunpunainen);
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+
 	min-height: 200px;
 	line-height: 1.8rem;
 	background: rgb(255, 226, 89);
 	background: linear-gradient(230deg, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 28%);
+}
+.firma {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 	flex-wrap: wrap;
 }
 .div {
@@ -20,6 +23,14 @@
 	justify-content: space-evenly;
 	align-items: center;
 	margin-top: 10px;
+}
+.contentful {
+	align-items: center;
+	padding-bottom: 1em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 @media only screen and (max-width: 800px) {
