--- a/styles/otayhteytta.module.css
+++ b/styles/otayhteytta.module.css
@@ -1,14 +1,20 @@
 .container {
+	background-image: url('/images/muut/maalaus.jpg');
+	background-size: cover;
+	height: 50vh;
+	margin-top: 2em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: relative;
 }
-.image {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: -3;
+
+.kartta {
+	height: 100%;
+	width: 100%;
+}
+.iframe {
+	width: 60vw;
+	height: 40vh;
+	min-width: 300px;
+	min-height: 300px;
 }
