--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar {
 	min-width: 400px;
-	position: absolute;
+
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -61,5 +61,6 @@
 	.sidebarbtn {
 		width: auto;
 		background: transparent;
+		margin: 0 4px;
 	}
 }
