--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar {
 	min-width: 400px;
-
+	position: absolute;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -8,7 +8,7 @@
 	padding: 1em;
 	background: rgb(255, 226, 89);
 	background: radial-gradient(circle, rgba(255, 226, 89, 1) 7%, rgba(255, 167, 81, 1) 32%, rgba(255, 226, 89, 1) 90%);
-	z-index: 2;
+	z-index: 21;
 	height: 100%;
 	border: 1px solid var(--janskunpunainen);
 }
