--- a/styles/tuotteet.module.css
+++ b/styles/tuotteet.module.css
@@ -1,3 +1,7 @@
+.container {
+	position: relative;
+}
+
 .tuotteetsivu {
 	transition: 1s all;
 	position: relative;
@@ -5,11 +9,12 @@
 }
 .sidebar {
 	transition: 1s all;
-
-	z-index: 3;
+	position: fixed;
+	z-index: 23;
 	min-width: 400px;
 	width: 50%;
 	height: 100%;
+	top: 100px;
 }
 .tuotteet {
 	width: 100%;
@@ -31,7 +36,11 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	position: sticky;
+	z-index: 20;
+	top: 10px;
 }
+
 .btn {
 	text-align: center;
 	width: 400px;
