--- a/styles/palvelutjatuotteet.module.css
+++ b/styles/palvelutjatuotteet.module.css
@@ -1,58 +1,35 @@
 .article {
+	background-color: var(--janskunvaaleanpunainen);
+	width: 300px;
+	height: 100px;
+	margin: 1em;
+	border-radius: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: row;
-	margin: 1em;
-	transition: var(--transition);
+	color: var(--janskunpunainen);
+	font-size: 1.7rem;
+	border: 2px solid var(--janskunpunainen);
+	animation-name: animaatio;
+	animation-duration: 1.5s;
 }
-.imagewrapper {
-	width: 30vw;
+@keyframes animaatio {
+	0% {
+		transform: translateY(700px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
 }
-.title_container {
-	background: rgba(255, 255, 255, 0.2);
-	display: inline-block;
-	padding: 1em;
-	width: 40vw;
-	max-width: 350px;
-
-	z-index: 1;
-	position: relative;
-	backdrop-filter: blur(10px);
-	border: solid 2px transparent;
-	background-clip: padding-box;
-	box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
-	text-align: center;
-	margin-left: -3em;
-	border-radius: 1em;
-}
-
-.title {
-	font-size: clamp(1rem, 3.5vw, 2.8rem);
-}
-
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 730px) {
 	.article {
-		transform: rotateZ(2deg);
-		flex-direction: column;
+		height: 20vh;
 	}
-	.article:hover {
-		transform: rotateZ(0deg);
-	}
-	.title_container {
-		background: rgba(255, 255, 255, 0.2);
-		display: inline-block;
-		padding: 1em;
-		width: 100%;
-		max-width: 350px;
-		z-index: 1;
-		position: relative;
-		backdrop-filter: blur(10px);
-		border: solid 2px transparent;
-		background-clip: padding-box;
-		box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
-		text-align: center;
-		margin-top: -3em;
-		border-radius: 1em;
+}
+
+@media only screen and (min-width: 1100px) {
+	.article {
+		width: 30vw;
+		height: 30vh;
 	}
 }
