--- a/styles/tutustupalveluihin.module.css
+++ b/styles/tutustupalveluihin.module.css
@@ -1,12 +1,26 @@
+.section {
+}
+
 .div {
 	display: flex;
 	flex-wrap: wrap;
 	color: var(--oakcolor);
 	align-items: center;
 	justify-content: center;
+	background-image: url('/images/muut/ompelutausta.jpg');
+	background-position: center;
+	background-size: cover;
 }
+
+@media only screen and (min-width: 730px) {
+	.div {
+		min-height: 60vh;
+	}
+}
+
 @media only screen and (min-width: 1100px) {
 	.div {
 		padding: 10vw;
+		min-height: 40vh;
 	}
 }
