--- a/styles/tutustupalveluihin.module.css
+++ b/styles/tutustupalveluihin.module.css
@@ -1,6 +1,3 @@
-.section {
-}
-
 .div {
 	display: flex;
 	flex-wrap: wrap;
@@ -11,16 +8,31 @@
 	background-position: center;
 	background-size: cover;
 }
+.div h3 {
+	padding: 4px 15px;
+	border-radius: 7px;
+	background: #fcddec;
+	box-shadow: inset 3px 3px 10px #d4bac6, inset -3px -3px 10px #ffffff;
+}
 
 @media only screen and (min-width: 730px) {
 	.div {
 		min-height: 60vh;
+	}
+	.div h3 {
+		padding: 10px 15px;
+	}
+	.article:hover {
+		transform: translateY(-10px);
 	}
 }
 
 @media only screen and (min-width: 1100px) {
 	.div {
 		padding: 10vw;
-		min-height: 40vh;
+		min-height: 30vh;
+	}
+	.div h3 {
+		padding: 15px;
 	}
 }
