--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -24,6 +24,8 @@
 	align-items: center;
 	z-index: 999;
 	border-radius: 5px;
+	position: relative;
+	cursor: pointer;
 }
 .btnactive {
 	transform: scale(1.1);
@@ -61,7 +63,22 @@
 .a {
 	color: var(--janskunpunainen);
 }
-
+.btnwrapper {
+	display: flex;
+	flex-direction: row;
+}
+.btn:first-child {
+	margin-right: 20px;
+}
+.span {
+	position: absolute;
+	background-color: white;
+	padding: 4px;
+	font-size: 1rem;
+	right: -10px;
+	top: -5px;
+	border-radius: 50%;
+}
 @media only screen and (min-width: 1200px) {
 	.logo {
 		min-width: 30vw;
@@ -74,7 +91,7 @@
 		opacity: 1;
 		z-index: 10;
 	}
-	.btn {
+	.btn:last-child {
 		display: none;
 	}
 	.navbar {
