--- a/styles/palvelutjatuotteet.module.css
+++ b/styles/palvelutjatuotteet.module.css
@@ -14,6 +14,11 @@
 	animation-duration: 1.5s;
 	text-transform: capitalize;
 	transition: var(--transition);
+	cursor: pointer;
+	transition: var(--transition);
+}
+.article:hover {
+	transform: translateX(-10px);
 }
 @keyframes animaatio {
 	0% {
