--- a/styles/verkkokauppa.module.css
+++ b/styles/verkkokauppa.module.css
@@ -27,10 +27,12 @@
 	font-size: 1.2rem;
 }
 .open {
-	height: 100vh;
-	width: 100vw;
+	position: fixed;
+	height: 85vh;
+	width: 90vw;
 	opacity: 1;
 	z-index: 100;
+	overflow: hidden;
 }
 .iconwrapper {
 	height: 3em;
