--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,12 @@ section {
 .kauppa {
 	font-family: 'Permanent Marker', cursive;
 }
+.generalbtn {
+	margin: 10px;
+	padding: 5px 10px;
+	font-size: 1.2rem;
+	background-color: var(--janskunpunainen);
+	color: var(--janskunvaaleanpunainen);
+	border: none;
+	border-radius: 2px;
+}
