--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -18,7 +18,12 @@
 	color: var(--oakcolor);
 	font-weight: 700;
 	margin-top: 2em;
-	height: 50px;
+	height: 130px;
+	padding: 1em;
+	border-radius: 2px;
+	border-radius: 2px;
+	background: #ffffff;
+	box-shadow: inset 11px 11px 23px #f2f2f2, inset -11px -11px 23px #ffffff;
 }
 .div:last-child {
 	margin-bottom: 1em;
