--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,11 +1,24 @@
+.header {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
 .h1 {
 	margin-top: 0.5em;
 	font-size: clamp(2rem, 5vw, 4rem);
 	text-align: center;
 	color: var(--janskunpunainen);
 	font-family: 'Euphoria Script', cursive;
+	border-radius: 2px;
+	border-radius: 2px;
+	background: #ffffff;
+	box-shadow: 6px 6px 12px #e3e3e3, -6px -6px 12px #ffffff;
+	width: 60vw;
 }
 .hr {
+	width: 100%;
 	margin-top: 5px;
 	border: 2px solid var(--janskunpunainen);
 }
