--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -56,12 +56,20 @@
 	width: 100%;
 	text-align: center;
 	background-color: var(white);
-	margin: 1px 0;
+	margin: 2px 0;
 	padding: 5px 0;
 	cursor: pointer;
+	transition: var(--transition);
+	border-radius: 2px;
+	background: #ffffff;
+	box-shadow: 9px 9px 18px #e3e3e3, -9px -9px 18px #ffffff;
 }
 .a {
 	color: var(--janskunpunainen);
+	font-size: 1.2rem;
+}
+.li:hover {
+	transform: scale(1.10);
 }
 .btnwrapper {
 	display: flex;
