--- a/styles/tuotteet.module.css
+++ b/styles/tuotteet.module.css
@@ -46,10 +46,12 @@
 	width: 400px;
 	padding: 5px;
 	font-size: 1.4rem;
-	background-color: var(--janskunvaaleanpunainen);
+	background-color: white;
 	color: var(--janskunpunainen);
-	border-radius: 4px;
-	border: 1px solid var(--janskunpunainen);
+	border: 3px solid var(--janskunpunainen);
+	border-radius: 2px;
+	background: #ffffff;
+
 	transition: var(--transition);
 }
 .btn:hover {
