--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -1,10 +1,12 @@
 .div {
-	height: 100%;
-	width: 100%;
+	height: 60vh;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 .text {
 	font-size: 2rem;
+	color: var(--joak);
 }
