--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -20,10 +20,6 @@
 	margin-top: 2em;
 	height: 130px;
 	padding: 1em;
-	border-radius: 2px;
-	border-radius: 2px;
-	background: #ffffff;
-	box-shadow: inset 11px 11px 23px #f2f2f2, inset -11px -11px 23px #ffffff;
 }
 .div:last-child {
 	margin-bottom: 1em;
@@ -36,7 +32,7 @@
 }
 .contentful {
 	align-items: center;
-
+	margin-bottom: 2em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
