--- a/styles/kauppakortti.module.css
+++ b/styles/kauppakortti.module.css
@@ -1,4 +1,4 @@
-.card {
+.kortti {
 	height: 420px;
 	width: 300px;
 
@@ -8,18 +8,11 @@
 	padding: 1.5em;
 	border-radius: 10px;
 	z-index: 1;
-
+	cursor: pointer;
 	margin: 2em;
 	color: black;
-}
-.title {
-	text-transform: capitalize;
-	text-align: center;
-	margin-bottom: 0.8rem;
-}
-.luokka {
-	margin: 4px 0;
-}
-.selostus {
-	margin-bottom: 4px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: column;
 }
