pientä säätöä uuen ulkoasuun ja vanhojen näyttämiseen.

--- a/styles/uusi.module.css
+++ b/styles/uusi.module.css
@@ -18,3 +18,12 @@
 	display: flex;
 	justify-content: space-evenly;
 }
+.input {
+	padding: 1px;
+}
+.addbtn {
+	padding: 2px 5px;
+}
+.label {
+	font-size: 1.1rem;
+}
